Fix WCAG AAA color contrast warning

--- a/src/components/Sidebar/RsvpButton.css
+++ b/src/components/Sidebar/RsvpButton.css
@@ -9,17 +9,18 @@
   padding-right: calc(var(--spacingUnit) * 2);
   padding-left: calc(var(--spacingUnit) * 2);
   outline: solid 3px var(--linkColor);
-  font-weight: 600;
   text-decoration: none;
   text-transform: uppercase;
 }
 
 .RsvpButton-LinkPromo {
-  opacity: 0.5;
+  color: var(--textColorSubdued);
+  font-weight: bold;
   text-align: center;
 }
 
 .RsvpButton-Thanks {
   background: var(--primaryColorLight);
+  font-weight: bold;
   padding: calc(var(--spacingUnit));
 }
